--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+html{
+    scroll-behavior: smooth;
+}
 body{
   background-color:white;
   font-family: 'Montserrat', sans-serif;
@@ -17,10 +20,10 @@ section{
     float: right;
 }
 #header .contato a{
-    color: red;
+    color: rgb(3, 109, 26);
 }
 nav.menu{
-    background-color:red;
+    background-color:rgb(3, 109, 26);
     text-align: center;
 }
 nav.menu ul li{
@@ -34,8 +37,14 @@ nav.menu ul li a{
 a{
   text-decoration: none;
 }
+#logotipo img {
+    width: 10%;
+}
 .banner img{
-    width: 100%;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
 }
 .marcas ul li {
     display: inline-block;
@@ -53,7 +62,7 @@ a{
     color: #474747;
 }
 .item img {
-    width: 100%;
+    width: 60%;
 
 }
 .carro{
@@ -64,8 +73,26 @@ a{
     font-size: 23px;
     font-weight: bold;
 }
+.produtos .item {
+    width: 40%;
+}
+.item-sobre{
+    width: 90%;
+    border: 1px solid black;
+    padding: 30px;
+    margin-top: 30px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 80px;
+}
+#titulo-sobre{
+    font-size: 40px;
+    text-align: center;
+    margin-top: 15px;
+}
 .financiamento {
-    background:red;
+    background:rgb(3, 109, 26);
     color:white;
     text-align: center;
     font-size: 30px;
@@ -97,7 +124,7 @@ a{
 }
 .sublinhado{
     width: 150px;
-   background:red;
+   background:rgb(3, 109, 26);
     height: 10px;
     margin: 0 auto;
     margin-top: 10px;
@@ -108,12 +135,28 @@ a:hover{
     opacity: 0.8;
 }
 footer{
-    background-color: red; 
+    background-color: rgb(3, 109, 26); 
 }
 footer .item{
     color:#fff;
 }
-
+footer .menu li{
+    line-height: 35px;
+}
+footer .social li{
+    display: inline-block;
+    padding: 20px;
+    font-size: 50px;
+}
+footer .menu li a{
+    color: white;
+}
+footer i{
+    color: white;
+}
+footer .item form button{
+    margin: 0 auto;
+}
 .depoimentos .item{
     border: 1px solid #474747;
     width: calc(30% - 2px); 
@@ -129,4 +172,39 @@ footer .item{
 .depoimentos .cliente .nome{
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.contato input, .contato textarea{
+    border-bottom:2px solid white;
+    height: 35px;
+    padding: 5px;
+    margin: 10px;
+    font-size: 20px;
+    max-width: 250px;
+}
+.contato textarea {
+    height: 50px;
+    max-width: 250px;
+}
+.contato button {
+    background: transparent;
+    color: white;
+    border: 2px solid white;
+    padding: 10px 40px;
+    font-size: 15px;
+    display: block;
+    border-radius: 20px;
+}   
+.item.contato{
+    line-height: 30px;
+}
+.contato h3{
+    margin-bottom: 20px;
+}
+.contato p{
+    line-height: 49px;
+}
+#link-desabilitado{
+    color: #b0b0b0;
+    cursor: default;
 }
